[package]
name = "sankaku-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12"
curl = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.3"
anyhow = "1.0.68"