[package]
name = "sankaku-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
curl = "0.4.44"
url = "2.3"
anyhow = "1.0.68"

# Terminal ui lib. Not sure if I'll use this one.
console = "0.15.5"
dialoguer = "0.10.3"
indicatif = "0.17.3"

# New http client. Curl doesn't do it for me.
# Actix seems good for now.
actix-rt = "2.8.0"
awc = { version = "3.1.0", features = ["rustls"]}
bytes = "1.4.0"