[package]
name = "rusty_sankaku_dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.3"
anyhow = "1.0.68"
bytesize = "1.1.0"

# Terminal ui lib. Not sure if I'll use this one.
console = "0.15.5"
dialoguer = "0.10.3"
indicatif = "0.17.3"

# New http client. Curl doesn't do it for me.
# Actix seems good for now.
actix-rt = "2.8.0"
awc = { version = "3.1.0", features = ["rustls"] }
# For size limit on response body
bytes = "1.4.0"

# Http server for service to js frontend
actix-web = "4.3.0"
actix-cors = "0.6.4"

# Runtime for main thread
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
